@@ -3,6 +3,9 @@ NSD RELEASE NOTES
 3.2.16 (up next)
 ================
 
+FEATURES:
+	- Bugfix #496: Support for EUI48 and EUI64 RR types.
+
 BUG FIXES:
 	- Bugfix #487: lookup3.c determine endianness for BSD systems.
 	- Bugfix #494: Exit with return code 1 if socket code fails.
