@@ -236,6 +236,42 @@ rdata_ilnp64_to_string(buffer_type *output, rdata_atom_type rdata,
 }
 
 static int
+rdata_eui48_to_string(buffer_type *output, rdata_atom_type rdata,
+	rr_type* ATTR_UNUSED(rr))
+{
+	uint8_t* data = rdata_atom_data(rdata);
+	uint8_t a1 = data[0];
+	uint8_t a2 = data[1];
+	uint8_t a3 = data[2];
+	uint8_t a4 = data[3];
+	uint8_t a5 = data[4];
+	uint8_t a6 = data[5];
+
+	buffer_printf(output, "%.2x-%.2x-%.2x-%.2x-%.2x-%.2x",
+		a1, a2, a3, a4, a5, a6);
+	return 1;
+}
+
+static int
+rdata_eui64_to_string(buffer_type *output, rdata_atom_type rdata,
+	rr_type* ATTR_UNUSED(rr))
+{
+	uint8_t* data = rdata_atom_data(rdata);
+	uint8_t a1 = data[0];
+	uint8_t a2 = data[1];
+	uint8_t a3 = data[2];
+	uint8_t a4 = data[3];
+	uint8_t a5 = data[4];
+	uint8_t a6 = data[5];
+	uint8_t a7 = data[6];
+	uint8_t a8 = data[7];
+
+	buffer_printf(output, "%.2x-%.2x-%.2x-%.2x-%.2x-%.2x-%.2x-%.2x",
+		a1, a2, a3, a4, a5, a6, a7, a8);
+	return 1;
+}
+
+static int
 rdata_rrtype_to_string(buffer_type *output, rdata_atom_type rdata,
 	rr_type* ATTR_UNUSED(rr))
 {
@@ -593,6 +629,8 @@ static rdata_to_string_type rdata_to_string_table[RDATA_ZF_UNKNOWN + 1] = {
 	rdata_nsec_to_string,
 	rdata_loc_to_string,
 	rdata_ilnp64_to_string,
+	rdata_eui48_to_string,
+	rdata_eui64_to_string,
 	rdata_unknown_to_string
 };
 
@@ -670,6 +708,10 @@ rdata_wireformat_to_rdata_atoms(region_type *region,
 			break;
 		case RDATA_WF_ILNP64:
 			length = IP6ADDRLEN/2;
+		case RDATA_WF_EUI48:
+			length = EUI48ADDRLEN;
+		case RDATA_WF_EUI64:
+			length = EUI64ADDRLEN;
 			break;
 		case RDATA_WF_BINARY:
 			/* Remaining RDATA is binary.  */
