@@ -1,5 +1,6 @@
 10 April 2012: Matthijs
 	- Fix B64_NTOP/PTON replacement definitions in configure.ac.
+	- Bug #496: Support for EUI498 and EUI64 RR types.
 
 3 April 2012: Matthijs
 	- Bug #494: Exit with return code 1 if socket code fails.
